Temporary animation horizontal scroll fix

--- a/themes/ockupy/static/css/particles.css
+++ b/themes/ockupy/static/css/particles.css
@@ -46,7 +46,7 @@
 /* ---- particles.js container ---- */
 
 #particles-js {
-  width:100vw;
+  width:100%;
   height: 100%;
   background-color: rgba(0,0,0,0);
   background-image: url('');
@@ -55,8 +55,4 @@
   background-repeat: no-repeat;
   position: fixed;
   top:0;
-}
-
-.particles-js-canvas-el {
-  width:100vw!important;
 }
