--- a/themes/ockupy/static/css/style.css
+++ b/themes/ockupy/static/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300|Crimson+Text:600');
 
+.featured-columns .right {
+  overflow-x: hidden!important;
+}
+
 h1,h2 {
   font-family: 'Poppings', sans-serif;
   font-weight: 700;
